# _examples/authors/sqlite-frontend/internal/authors/models.go
@@ -9,7 +9,8 @@ import (
 )
 
 type Author struct {
-	ID   int64
-	Name string
-	Bio  sql.NullString
+	ID        int64
+	Name      string
+	Bio       sql.NullString
+	CreatedAt sql.NullTime
 }
